--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
+<!-- untuk build project mvn clean package -->
 	<build>
 		<finalName>belajar</finalName>
 	</build>
